static/css/base.css
/* 
font-family: 'Indie Flower', cursive;
font-family: 'Playfair Display', serif; */

/* color palette:   #1ef1f1 for a impactfull black text on navbar and Logo
                    #965d30 for a combination of colors for the background - first shade
                    #b76a44 for a combination of colors for the background - second shade
                    #e8a49a for a combination of colors for the background - third shade
                    #ffbfbe for a combination of colors for the background - fourth shade
                    #ebe8ee for the ghost white to accentuate dark text and on some text
                
*/

@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Playfair+Display:ital,wght@1,600&display=swap');

html {
    scroll-behavior: smooth;
    margin: 0;
    padding: 0;
}

body {
    background: linear-gradient(to top right, #965d30, #b76a44, #e8a49a, #ffbfbe) no-repeat;
    background: -moz-linear-gradient(to top right, #965d30, #b76a44, #e8a49a, #ffbfbe) no-repeat;
    background: -ms-linear-gradient(to top right, #965d30, #b76a44, #e8a49a, #ffbfbe) no-repeat;
    background: -webkit-linear-gradient(to top right, #965d30, #b76a44, #e8a49a, #ffbfbe) no-repeat;
    background: -webkit-linear-gradient(to top right, #965d30, #b76a44, #e8a49a, #ffbfbe) no-repeat;
    background: -o-linear-gradient(to top right, #965d30, #b76a44, #e8a49a, #ffbfbe) no-repeat;
    background-size: cover;
    color: #2e1b09;
    font-family: 'Indie Flower', cursive;
}

a {
    color: #10151b;
    text-decoration: none;
    background-color: transparent;
    max-height: 17rem;
}

p {
    color: #2f231a;
}

.navbar__main {
    height: 100%;
    display: flex;
}

.navbar__main li {
    border-radius: 20% !important;
    font-size: 1.5rem;
}

.navbar__main li {
    margin-right: 0.5em;
}

.nav-link {
    color: #1e1f1f !important;
    background-color: #f3ab99 !important;
}

.nav-link:hover {
    color: #ebe8ee !important;
    background-color: #b76a44 !important;
}

.search__btn:hover {
    background-color: #f3ab99 !important;
}

.product-details-container {
    background-color: rgb(37 23 23 / 84%);
    color: #ffffff;
    font-size: 2rem;
}

.product-details-container p {
    color: #efe1d6;
}

.card__img {
    object-fit: contain !important;
    display: block !important;
    max-height: 100% !important;
    margin: 0 auto !important;
}

.card__img:hover {
    opacity: 0.7 !important;
}

.product-details-container .macrame_detail_render.editing__mac {
    background-color: #884e53 !important;
}

.macrame_detail_render.editing__mac:hover {
    background-color: #c49195 !important;
}

.macrame_detail_render.deleting__mac:hover {
    background-color: #988e8f !important;
}

.macrame_detail_render.deleting__mac {
    background-color: #a8552b;
}

.decrement-qty,
.increment-qty {
    background-color: #f3ab99;
}

.btn__shopping {
    background-color: #a8552b;
    color: black !important;
    padding: 6.9px 12px !important;
}

.btn__shopping:hover {
    background-color: #e19ea4;
}

.btn__add {
    background-color: #988e8f;
}

.btn__add:hover {
    background-color: #ebe0e1;
}

.add__rev__btn {
    background-color: #a8552b;
}

.add__rev__btn:hover {
    background-color: #f0c2ac;
}

.btn__update_rev {
    background-color: #e19ea4;
}

.btn__remove__rev:hover {
    background-color: #524844;
    color: #ebe8ee;
}

.btn__update_rev:hover {
    background-color: #713338;
    color: #ebe8ee;
}

.btn__remove__rev {
    background-color: #a8552b;
    color: black;
}

a>.btn__checkout {
    background-color: #6f5a5c !important;
    color: white !important;
}

a>.btn__checkout:hover {
    background-color: #e19ea4 !important;
}

h4 {
    color: #cfc8c6;
    font-size: smaller;
}

h5 {
    color: #886e67;
}

.log-btn {
    background-color: #ffbfbe !important;
}

.log-btn:hover {
    background-color: #965d30 !important;
}

.card {
    position: relative;
    display: -ms-flexbox;
    display: grid;
    min-width: 0;
    word-wrap: break-word;
    background-color: #fff;
    background-clip: border-box;
    border: 1pxsolidrgba(0, 0, 0, .125);
    border-radius: 0.25rem;
}

.macrame__detail__left {
    max-width: 30rem;
    margin: 0 auto;
}

.overlay {
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    position: fixed;
    z-index: -1;
}

a.category-badge>span.badge:hover {
    background: #212529 !important;
    color: #fff !important;
}

.btt-button {
    height: 42px;
    width: 42px;
    position: fixed;
    bottom: 10px;
    right: 10px;
}

input[name='q']::placeholder {
    color: #aab7c4;
}

/* Macrame Form with the widget */

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #e19ea4;
    border-radius: 0;
}

.shop-now-button {
    background-color: #4B0209 !important;
    font-weight: bolder !important;
    color: floralwhite;
}

.shop-now-button:hover {
    background-color: #ed9da3 !important;
}

.home__a,
.to-top__btn {
    font-size: 2.5rem;
    background-color: #f3ab99;
    color: #493a3a;
    font-size: calc(60% + 0.8vmin);
}

.home__a:hover,
.to-top__btn:hover {
    background-color: #493a3a;
    color: #f3ab99;
    text-decoration: none;
}

.cart__nav {
    font-size: calc(60% + 0.8vmin);
    display: inline-block !important;
}

.fa-shopping-cart:hover {
    color: #696363;
}

.detail__img__holder {
    max-width: 10rem !important;
}

.navbar-brand,
.fa-shopping-cart {
    color: #493a3a !important;
}

.update-link,
.remove-item {
    cursor: pointer;
    font-size: 1.5rem;
}

.update-link:hover {
    background-color: #835b51 !important;
    color: #f6e8e4 !important;
}

.remove-item:hover {
    background-color: #e19ea4;
}

.logo {
    display: flex !important;
    justify-content: start;
    align-items: center;
}

.logo__name {
    color: #412722;
    font-size: 2rem;
    margin-right: 2vw;
}

a .logo__name:hover {
    color: #2e1b09;
}

.logo__image {
    height: 6rem;
    width: 6rem;
}

.cart__image--container {
    height: 9rem !important;
    width: 9rem !important;
}

.cart__image--container img {
    display: block;
    width: 100% !important;
    height: 100% !important;
    object-fit: contain !important;
    object-position: center;
}

.likes-font {
    color: #564c4a;
}

.heart__btn {
    color: #dc3545;
    background-color: #e8a6ab;
}

.heart__btn:hover {
    background-color: #e8a6ab;
}

.blockquote-footer {
    color: #301d0f !important;
    background-color: unset;
    font-size: 1.5rem;
}

.review-wrap {
    background-color: #ebe8ee;
    opacity: 0.8;
}

.grand-total {
    color: #0d0d0e !important;
    font-size: 2.5rem;
}

/* ------------------------------- bootstrap toasts */

.message-container {
    position: fixed;
    top: 75px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 3px;
}

/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0;
    height: 0;
    border-left: 4px solid transparent;
    border-right: 4px solid transparent;
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

.bag-total:hover {
    color: #fee1d9;
}

/* Allauth form formatting */

.allauth-form-inner-content p {
    margin-top: 2.5rem;
    /* mt-4 */
    color: #222425;
    /* text-secondary */
}

.allauth-form-inner-content input {
    border-color: #000;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
    /* btn */
    display: inline-block;
    font-weight: 400;
    color: #fff;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: rgb(92, 65, 42);
    border: 1px solid rgb(73, 30, 30);
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0;

    /* standard bootstrap btn transitions */
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {
    color: #fff;
    background-color: #222;
    border-color: #222;
}

.allauth-form-inner-content a {
    color: #17a2b8;
    /* text-info */
}

.signout-btn {
    background-color: #e8a49a;
    border-radius: 15%;
}

.signout-btn:hover {
    background-color: #4f5458;
}

.blockquote-footer {
    color: #0d0d0e !important;
}

.blockquote-footer:hover {
    background-color: #c68c6f !important;
}

/* Media queries */

/* Large devices (desktops, less than 1200px) */

@media (max-width: 1185.98px) {

    .home__a {
        font-size: 1rem !important;
    }

    .cart__nav {
        font-size: 1rem !important;
    }
}

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
    .container {
        max-width: 80%;
    }
}

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }
}

/* Medium devices (tablets, less than 992px) */

/* pad the top a bit when navbar is collapsed on mobile */
@media (max-width: 991px) {
    .header-container {
        padding-top: 146px;
    }

    .cart__img {
        max-width: 220px !important;
    }

    .logo__name {
        display: none !important;
    }


}

/* Small devices (landscape phones, less than 768px) */
@media (max-width: 767.98px) {

    .cart__image--container {
        height: 4.5rem !important;
        width: 4rem !important;
    }

    .cart__img {
        max-width: 40px !important;
    }
}

/* Extra small devices (portrait phones, less than 576px) */
@media (max-width: 480.98px) {

    .cart__image--container {
        height: 3.5rem !important;
        width: 3rem !important;
    }

    .cart__img {
        max-width: 40px !important;
    }

    .checkout__img {
        max-width: 150px !important;
    }

    .logo__image {
        width: 1.5rem !important;
        height: 1.5rem !important;
    }

    .home__a {
        font-size: 1.5rem !important;
    }
}

